# project_wsx

./: .dockerignore  .gitignore  Dockerfile.production  README.md  notes.md  poetry.toml  pyproject.toml
content_extract_agent/: agent.py
migrations/: env.py
migrations/versions/: 11200ec733b8_add_status_to_tasks.py  3758cd2a8e0e_documents_table.py
src/project_wsx/: db.py  main.py  mcp_server.py
src/project_wsx/api/: __init__.py
src/project_wsx/api/routers/: tasks.py
src/project_wsx/core/: database.py  logging.py  settings.py
src/project_wsx/mcp/: middleware.py  oauth.py  registry.py  server.py  tasks.py
src/project_wsx/models/: __init__.py  document.py  document_chunk.py  task.py
src/project_wsx/routers/: tasks.py
src/project_wsx/schemas/: __init__.py  task_base.py
src/project_wsx/scripts/: t09_bootstrap_ingest.py  t11_sample_mcp_server.py  t11_streamlit_mcp_client.py  t12_task_mcp_client.py  t12_task_mcp_server.py  tasks_old_records.py
src/project_wsx/services/: ollama_client.py  pdf_loader.py
src/project_wsx/utils/: get_project_root.py
