[project]
authors = [{name = "Prasanna Kumar", email = "prasannaboga@gmail.com"}]
dependencies = [
  "aiohttp==3.12.15",
  "BeautifulSoup4==4.13.4",
  "mcp[cli]>=1.13.0,<2.0.0",
  "python-dotenv==1.1.1",
  "streamlit==1.48.1",
  "uv==0.8.11",
]
description = "My Project WSX"
name = "project-wsx"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[tool.poetry]
packages = [{include = "project_wsx", from = "src"}]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[project.scripts]
hello_world = "project_wsx.scripts.hello_world:main"
t11_sample_mcp_server = "project_wsx.scripts.t11_sample_mcp_server:main"
