[project]
authors = [{ name = "Prasanna Kumar", email = "prasannaboga@gmail.com" }]
dependencies = [
  "aiohttp==3.13.2",
  "alembic==1.17.2",
  "BeautifulSoup4==4.13.4",
  "fastapi[standard]==0.123.10",
  "mcp[cli]==1.25.0",
  "python-dotenv==1.2.1",
  "sqlalchemy==2.0.45",
  "streamlit==1.52.2",
  "uv==0.9.18",
  "uvicorn==0.40.0",
  "watchdog (>=6.0.0,<7.0.0)",
  "watchfiles==1.1.1",
  "google-adk (>=1.21.0,<2.0.0)",
  "loguru (>=0.7.3,<0.8.0)",
]
description = "My Project WSX"
name = "project-wsx"
readme = "README.md"
requires-python = "3.14.2"
version = "0.1.2"

[tool.poetry]
packages = [{ include = "project_wsx", from = "src" }]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[project.scripts]
hello_world = "project_wsx.scripts.hello_world:main"
t11_sample_mcp_server = "project_wsx.scripts.t11_sample_mcp_server:main"
t12_task_mcp_client = "project_wsx.scripts.t12_task_mcp_client:main"
t12_task_mcp_server = "project_wsx.scripts.t12_task_mcp_server:main"
